# ai-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.stoneforge/: config.yaml
.stoneforge/sync/: dependencies.jsonl  elements.jsonl
alembic/: __init__.py  env.py
alembic/versions/: __init__.py  dd8d9620c6a8_create_initial_tables_with_pgvector_support.py
docker/api/: Dockerfile
docker/grafana/dashboards/: dashboards.yml
docker/postgres/: postgresql.conf
docker/prometheus/: prometheus.yml
docker/scheduler/: Dockerfile
docker/worker/: Dockerfile
docs/: 01_PRD.md  02_ARCHITECTURE.md  03_DATA_MODEL.md  04_DATABASE_SCHEMA.md  05_TAXONOMY.md  06_SOURCE_CATALOG.md  07_SCRAPER_DESIGN.md  08_DATA_PIPELINE.md  09_VALIDATION.md  10_ENRICHMENT.md  11_DEDUPLICATION.md  12_API_SPEC.md  13_INFRASTRUCTURE.md  14_CONFIGURATION.md  15_SECURITY.md  16_DATA_GOVERNANCE.md  17_TESTING.md  18_MONITORING.md  19_ERROR_HANDLING.md  20_PERFORMANCE.md  21_RUNBOOK.md  22_ROADMAP.md
src/: __init__.py
src/apivault/: __init__.py  config.py  database.py  enrichment.py  main.py  scheduler.py  worker.py
src/apivault/enrichment/: __init__.py  embedding_client.py  llm_client.py  models.py  repository.py
src/apivault/models/: __init__.py  api.py  api_endpoint.py  api_health_log.py  base.py  (+2 more)
tests/enrichment/: test_enrichment_service.py  test_llm_client.py  test_models.py
tests/pipeline/: test_deduplicator.py  test_fingerprint.py  test_models.py  test_normalizer.py  test_orchestrator.py  test_scheduler.py  test_worker.py
tests/prospecting/: test_gdpr.py  test_models.py  test_storage.py
tests/routers/: test_browse_detail.py  test_search.py
tests/validation/: test_repository.py  test_service.py
(+57 files in other folders)
