[project]
name = "apivault"
version = "0.1.0"
description = "The World's Most Complete Free API Database"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
